# whisperframe

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  activate_env.fish  activate_env.sh  install_manually.sh  llms.txt  og-image.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  task.md  video_frame_extractor.py  video_transcriber.py
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  publish-container.yml  release.yml
scripts/: install-hooks.sh  setup-repo.sh
tests/: test_smoke.py
website/: index.html  robots.txt  sitemap.xml  styles.css
website/da/: index.html
website/fa/: index.html
