[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperframe"
version = "1.0.0"
description = "AI-Powered Video Processing Toolkit with Whisper transcription and frame extraction"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "COCODE.DK", email = "info@cocode.dk"}
]
maintainers = [
    {name = "COCODE.DK", email = "info@cocode.dk"}
]
keywords = ["video", "transcription", "whisper", "ai", "ffmpeg", "frame-extraction", "speech-to-text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "git+https://github.com/openai/whisper.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "pre-commit>=3.0.0",
    "coverage>=7.0.0",
    "codecov>=2.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "pdbpp>=0.10.0",
    "ipdb>=0.13.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
    "virtualenv>=20.0.0",
    "pip-tools>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/cocode-dk/whisperframe"
Documentation = "https://github.com/cocode-dk/whisperframe#readme"
Repository = "https://github.com/cocode-dk/whisperframe"
"Bug Tracker" = "https://github.com/cocode-dk/whisperframe/issues"
"Source Code" = "https://github.com/cocode-dk/whisperframe"

[project.scripts]
whisperframe = "whisperframe.cli:main"
whisper-transcribe = "whisperframe.video_transcriber:main"
whisper-extract = "whisperframe.video_frame_extractor:main"

[tool.setuptools]
packages = ["whisperframe"]

[tool.setuptools.package-data]
whisperframe = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["whisperframe"]
known_third_party = ["torch", "torchaudio", "whisper", "ffmpeg"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["whisperframe"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
